tests/safe_struct_error3.june
// error: return type is not alias-safe

struct Stats {
    age: i64
}

struct Foo {
    private stats: Stats

    fun create(age: i64) -> safe Foo {
        return new safe Foo(stats: new Stats(age: age))
    }

    fun get_stats(self) -> Stats {
        return .stats
    }
}

fun main() {
    let foo = Foo::create(age: 88)
}